--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Stop merge conflicts arising from different versions of unity being used
+ProjectSettings/ProjectVersion.txt
